Sun Oct 20 00:23:03 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/tests/LoadBalancing/GenericFactory/Application_Controlled/server.cpp: 
	  Renamed the variables loc1 and loc2 as location1 and
	  location2. The variables loc1 and loc2 is a legacy left over in
	  UNIX, which denotes pointers to characters matched by regular
	  expressions. This should fix compile errors in SunCC builds.
	
Sun Oct 20 00:10:14 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/ImplRepo_Service/Makefile: Fixed the problems with this
	  change "Fri Oct 18 15:52:11 2002 Priyanka Gontla
	  <pgontla@ociweb.com>". 

Sat Oct 19 09:47:43 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/Makefile: Prevent ImplRepo from being compiled
	  in minimum_corba setting. The fix "Fri Oct 18 15:52:11 2002
	  Priyanka Gontla  <pgontla@ociweb.com>" seems goofy. Need to get
	  Criag and Priyanka to take a look.

Sat Oct 19 08:40:46 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/Log/EventLog_i.cpp:
	* orbsvcs/orbsvcs/Log/EventLog_i.h:
	* orbsvcs/orbsvcs/Log/NotifyLog_i.cpp:
	* orbsvcs/orbsvcs/Log/NotifyLog_i.h:
	* orbsvcs/orbsvcs/Log/RTEventLog_i.cpp:
	* orbsvcs/orbsvcs/Log/RTEventLog_i.h: Renamed the class
	  LogConsumer declared by the same name in all the translation
	  units as TAO_Rtec_LogConsumer, TAO_Notify_LogConsumer and
	  TAO_Event_LogConsumer. This should fix link time warnings in
	  SUNCC builds.

Fri Oct 18 23:32:11 2002  Mayur Deshpande  <mayur@ics.uci.edu>

	* examples/AMH/Sink_Server/Timer_Handler.cpp (handle_timeout):

	  Changed the ResponseHandler to a _var instead of a _ptr. This
 	  not only takes care of deleting the pointer in exceptional
 	  circumstances but the code is also much cleaner.  Thanks to
 	  Ossama Othman <ossama.ece.uci.edu> for the tip and code-review.
