@@ -1,3 +1,7 @@
+Sun Oct 20 08:18:28 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
+
+	* orbsvcs/ImplRepo_Service/Makefile: Fixed a typo that broke the minimum builds.
+
 Sun Oct 20 00:23:03 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* orbsvcs/tests/LoadBalancing/GenericFactory/Application_Controlled/server.cpp: 
